<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="decent_10">Decent (10%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="round_up_tip">Round Up Tip?</string>
</resources>