<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cost_of_service"
        android:hint="@string/cost_of_service"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Service_Rating_Ques"
        android:text="@string/how_was_the_service"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Service_options"
        android:checkedButton="@id/Amazing"
        app:layout_constraintTop_toBottomOf="@id/Service_Rating_Ques"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            android:id="@+id/Amazing"
            app:layout_constraintTop_toBottomOf="@id/Service_Rating_Ques"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_15"
            android:id="@+id/Good"
            app:layout_constraintTop_toBottomOf="@id/Amazing"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decent_10"
            android:id="@+id/Decent"
            app:layout_constraintTop_toBottomOf="@id/Good"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        android:id="@+id/roundup_switch"
        android:checked="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Service_options"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate"
        android:text="@string/calculate_tip"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/roundup_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>